# greek-grammar

./: .gitignore  .gitmodules  .travis.yml  2nd Declension.txt  GreekGrammar.cabal  LICENSE  README.md  Theos.txt  Third Declension  build.js  build.js.map  build.sh  cluster-vowel.txt  config.js  greek-grammar.cabal  index.html  package.json  stack.yaml  stages.json
agda/Language/: Greek.agda
agda/Text/Greek/: Bible.agda  SBLGNT-Query.agda  SBLGNT.agda  Script.agda
agda/Text/Greek/SBLGNT/: 1Cor.agda  1John.agda  1Pet.agda  1Thess.agda  1Tim.agda  2Cor.agda  2John.agda  2Pet.agda  2Thess.agda  2Tim.agda  3John.agda  Acts.agda  Col.agda  Eph.agda  FirstJohn.agda  Gal.agda  Heb.agda  Jas.agda  John.agda  Jude.agda  Luke.agda  Mark.agda  Matt.agda  Phil.agda  Phlm.agda  Rev.agda  Rom.agda  Titus.agda
agda/Text/Greek/Script/: Unicode.agda
agda2/Grammar/Greek/: Smyth.agda
agda2/Text/Greek/: Smyth.agda
data/: data.json  stages.json  types.json  word.json  work.json
data/types/: type0.json  type1.json  type100.json  type101.json  type103.json  type104.json  type105.json  type106.json  type14.json  type15.json  type16.json  type17.json  type18.json  type19.json  type2.json  type22.json  type23.json  type24.json  type25.json  type32.json  type37.json  type38.json  type39.json  type4.json  type40.json  type41.json  type42.json  type44.json  type45.json  type46.json  type47.json  type48.json  type49.json  type5.json  type50.json  type51.json  type52.json  type53.json  type54.json  type55.json  (+42 more)
data/works/: work1.json  work10.json  work11.json  work12.json  work13.json  work14.json  work15.json  work16.json  work17.json  work18.json  work19.json  work20.json  work21.json  work22.json  work23.json  work24.json  work25.json  work26.json  work5.json  work6.json  work7.json  work8.json  work9.json
docs/: 1st Declension.txt  2015-03 SBL Proposal.md  2nd Declension.txt  Euphony Rules (general).txt  Present Active Indicitive (Euphony Rules)  ProgressLog.md
executables/: sblgnt.hs  unicode-script.hs
haskell/greek-grammar/: greek-grammar.cabal
haskell/greek-grammar/executables/: Perseus.hs  Run.hs  sblgnt.hs
haskell/greek-grammar/src/Data/Unicode/: Decompose.hs  DecomposeChar.hs  LetterMarkGroup.hs  MarkedLetter.hs
haskell/greek-grammar/src/Text/Greek/: Conversions.hs  FileReference.hs  Grammar.hs  IO.hs  Json.hs  Paths.hs  Process.hs  Render.hs  Script.hs  Sublist.hs  Utility.hs  Xml.hs
haskell/greek-grammar/src/Text/Greek/Corpus/: Bible.hs
haskell/greek-grammar/src/Text/Greek/Corpus/Bible/: Stats.hs
haskell/greek-grammar/src/Text/Greek/IO/: Json.hs  Morphgnt.hs  Paths.hs  Pipeline.hs  Process.hs  Render.hs  Stage.hs  Type.hs  Utility.hs
haskell/greek-grammar/src/Text/Greek/Morphology/: Noun.hs
haskell/greek-grammar/src/Text/Greek/Mounce/: Adjective.hs  Euphony.hs  Morphology.hs  Noun.hs  NounFirstDeclension.hs  Parse.hs  Phonology.hs  Verb.hs
haskell/greek-grammar/src/Text/Greek/NewTestament/: SBL.hs  SBLSimple.hs
haskell/greek-grammar/src/Text/Greek/Parse/: Utility.hs
haskell/greek-grammar/src/Text/Greek/Phonology/: Consonant.hs  Contractions.hs  Euphony.hs  ShowText.hs
haskell/greek-grammar/src/Text/Greek/Script/: Abstract.hs  Concrete.hs  DecomposeChar.hs  Elision.hs  Letter.hs  Mark.hs  Marked.hs  Place.hs  Punctuation.hs  Raw.hs  Sound.hs  Syllable.hs  Token.hs  Unicode.hs  UnicodeTokenPairs.hs  Unit.hs  Word.hs
haskell/greek-grammar/src/Text/Greek/Source/: All.hs  FileReference.hs  Morphgnt.hs  Osis.hs  PerseusInventory.hs  SBL.hs  Sblgnt.hs  SblgntApp.hs  Work.hs
haskell/greek-grammar/src/Text/Greek/Source/Perseus/: Catalog.hs  Edition.hs  TEI.hs
haskell/greek-grammar/src/Text/Greek/Xml/: Common.hs  Event.hs  Parse.hs  Parsec.hs
haskell/greek-grammar/tests/: hunit.hs
haskell/ucd/: UcdGen.hs  ucd.cabal
haskell/unicode-script/: unicode-script.cabal  unicode-script.hs
html/dev/: config.js  index.html  package.json
html/dev/css/: styles.css
html/dev/data/: data.json  index.json  sketch.json  stage0.json
html/dev/data/values/: type0.json  type7.json
html/dev/data/works/: work0.json  work1.json  work10.json  work11.json  work12.json  work13.json  work14.json  work15.json  work16.json  work17.json  work18.json  work19.json  work2.json  work20.json  work21.json  work22.json  work23.json  work24.json  work25.json  work26.json  work3.json  work4.json  work5.json  work6.json  work7.json  work8.json  work9.json
html/dev/lib/: action.js  actions.js  app.js  instanceList.js  labelNumber.js  license.js  main.js  nav.js  property.js  reducers.js  render.js  showAll.js  state.js  typeList.js  valueList.js  word.js  work.js  workList.js
html/dev/styles/: styles.css
lib/: main.js  render.js
output/: Output.txt  Tokens.txt  cluster-consonant.txt  cluster-initial.txt  cluster-not-initial.txt  cluster-vowel.txt  sblgnt-mounce-nouns.txt  unit-letter-marks.txt  unit-mark-letter-pairs.txt  unit-properties.txt
src/Language/Greek/: Script.agda
src/Text/Greek/: Conversions.hs  Grammar.hs  IO.hs  Paths.hs  Script.hs
src/Text/Greek/Corpus/: Bible.hs
src/Text/Greek/Corpus/Bible/: Stats.hs
src/Text/Greek/Lexicon/: Lemmas.hs
src/Text/Greek/Morphology/: Noun.hs  PartOfSpeech.hs
src/Text/Greek/Mounce/: Adjective.hs  Euphony.hs  Morphology.hs  Noun.hs  NounFirstDeclension.hs  NounSecondDeclension.hs  NounThirdDeclension.hs  Parse.hs  Phonology.hs  Quote.hs
src/Text/Greek/NewTestament/: Bible.hs  SBL.hs
src/Text/Greek/Phonology/: Consonants.hs  Contractions.hs  Euphony.hs  Phoneme.hs  Shorthand.hs  ShowText.hs  Vowels.hs
src/Text/Greek/Script/: Sound.hs  Token.hs  Unicode.hs
src/agda/Language/Greek/: ScriptRules.txt
src/haskell/: Main.hs
src/haskell/Data/Text/Format/: Strict.hs
src/haskell/Text/Greek/NewTestament/: Bible.hs  SBL.hs
tests/: hunit.hs
