name:                GreekGrammar
version:             0.1.0.0
synopsis:            Greek grammar analysis tools
license:             MIT
license-file:        LICENSE
author:              Scott Fleischman
maintainer:          
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable GreekGrammar
  main-is:             Main.hs
  ghc-options:         -Wall
  other-extensions:    NoImplicitPrelude,
                       OverloadedStrings
  build-depends:       base >=4.7,
                       text >=1.2,
                       system-filepath >=0.4,
                       containers >=0.5,
                       xml-conduit >=1.2
  hs-source-dirs:      src/haskell
  default-language:    Haskell2010
