name:                GreekGrammar
version:             0.1.0.0
synopsis:            Greek grammar analysis tools
license:             MIT
license-file:        LICENSE
author:              Scott Fleischman
maintainer:          
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable GreekGrammar
  main-is:     Main.hs
  ghc-options: -Wall -fwarn-tabs -O2 -ddump-splices
  build-depends:
    base >=4.7,
    text >=1.2,
    system-filepath >=0.4,
    containers >=0.5,
    data-default >=0.5,
    xml-conduit >=1.2,
    mtl >=2.1,
    lens >=4.7,
    xml-lens >=0.1
  hs-source-dirs:   src/haskell
  default-language: Haskell2010
