name:                greek-grammar
version:             0.1.0.0
synopsis:            Greek grammar analysis tools
license:             MIT
license-file:        LICENSE
author:              Scott Fleischman
maintainer:          
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:
    base >=4.7,
    text >=1.2,
    mtl >=2.1,
    text-format >=0.3,
    system-filepath >=0.4,
    containers >=0.5,
    data-default >=0.5,
    xml-conduit >=1.2,
    lens >=4.7,
    xml-lens >=0.1
  exposed-modules:
    Data.Text.Format.Strict
    Text.Greek.Corpus.Bible
    Text.Greek.NewTestament.SBL
  ghc-options: -Wall -fwarn-tabs -O2 -ddump-splices
  hs-source-dirs:   src
  default-language: Haskell2010

executable sblgnt
  build-depends:
    base,
    text,
    text-format,
    data-default,
    system-filepath,
    xml-conduit,
    lens,
    greek-grammar
  main-is: sblgnt.hs
  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: executables
  default-language: Haskell2010
