name:                greek-grammar
version:             0.1.0.0
synopsis:            Greek grammar analysis tools
license:             MIT
license-file:        LICENSE
author:              Scott Fleischman
maintainer:          
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:
    base >=4.7,
    text >=1.2,
    mtl >=2.1,
    text-format >=0.3,
    system-filepath >=0.4,
    containers >=0.5,
    vector >=0.10,
    data-default >=0.5,
    xml-conduit >=1.2,
    lens >=4.7,
    xml-lens >=0.1
  exposed-modules:
    Data.Text.Format.Strict
    Text.Greek.Conversions
    Text.Greek.Corpus.Bible
    Text.Greek.Corpus.Bible.Stats
    Text.Greek.Grammar
    Text.Greek.Morphology.Noun
    Text.Greek.NewTestament.SBL
    Text.Greek.Paths
    Text.Greek.Phonology.Consonants
    Text.Greek.Phonology.Contractions
    Text.Greek.Phonology.Phoneme
    Text.Greek.Phonology.Shorthand
    Text.Greek.Phonology.Vowels
    Text.Greek.Script
    Text.Greek.Script.Sound
    Text.Greek.Script.Token
    Text.Greek.Script.Unicode
  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs:   src
  default-language: Haskell2010

executable sblgnt
  build-depends:
    base,
    text,
    text-format,
    data-default,
    system-filepath,
    vector,
    xml-conduit,
    lens,
    greek-grammar
  main-is: sblgnt.hs
  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: executables
  default-language: Haskell2010

executable unicode-script
  build-depends:
    base,
    text,
    system-filepath,
    containers,
    lens,
    text-format,
    greek-grammar
  main-is: unicode-script.hs
  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: executables
  default-language: Haskell2010

test-suite hunit
  type: exitcode-stdio-1.0
  main-is: hunit.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  build-depends:
    base,
    text,
    containers,
    test-framework,
    test-framework-hunit,
    test-framework-th,
    HUnit,
    data-default,
    xml-conduit,
    greek-grammar
