name:                greek-grammar
version:             0.1.0.0
synopsis:            Greek grammar analysis tools
license:             MIT
author:              Scott Fleischman
maintainer:          
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >=4.8,
    text >=1.2,
    mtl >=2.1,
    text-format >=0.3,
    filepath >=1.4,
    containers >=0.5,
    vector >=0.10,
    data-default >=0.5,
    xml-conduit >=1.3,
    lens >=4.9,
    xml-lens >=0.1,
    template-haskell >=2.10,
    parsec >=3.1,
    syb >= 0.4.4
  exposed-modules:
    Data.Text.Format.Strict
    Text.Greek.Conversions
    Text.Greek.Corpus.Bible
    Text.Greek.Corpus.Bible.Stats
    Text.Greek.Grammar
    Text.Greek.IO
    Text.Greek.Morphology.Noun
    Text.Greek.Mounce.Adjective
    Text.Greek.Mounce.Euphony
    Text.Greek.Mounce.Morphology
    Text.Greek.Mounce.Noun
    Text.Greek.Mounce.NounFirstDeclension
    Text.Greek.Mounce.NounSecondDeclension
    Text.Greek.Mounce.NounThirdDeclension
    Text.Greek.Mounce.Parse
    Text.Greek.Mounce.Phonology
    Text.Greek.Mounce.Quote
    Text.Greek.NewTestament.SBL
    Text.Greek.Paths
    Text.Greek.Phonology.Consonants
    Text.Greek.Phonology.Contractions
    Text.Greek.Phonology.Euphony
    Text.Greek.Phonology.Phoneme
    Text.Greek.Phonology.Shorthand
    Text.Greek.Phonology.ShowText
    Text.Greek.Phonology.Vowels
    Text.Greek.Script
    Text.Greek.Script.Sound
    Text.Greek.Script.Token
    Text.Greek.Script.Unicode
    Text.Greek.Script.UnicodeTokenPairs
  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs:   src
  default-language: Haskell2010

executable sblgnt
  build-depends:
    base,
    text,
    text-format,
    data-default,
    filepath,
    vector,
    xml-conduit,
    lens,
    greek-grammar
  main-is: sblgnt.hs
  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: executables
  default-language: Haskell2010

test-suite hunit
  type: exitcode-stdio-1.0
  main-is: hunit.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  build-depends:
    base,
    text,
    containers,
    test-framework,
    test-framework-hunit,
    HUnit,
    data-default,
    xml-conduit,
    lens,
    greek-grammar
