name:                greek-grammar
version:             0.1.0.0
synopsis:            Greek grammar analysis tools
license:             MIT
author:              Scott Fleischman
maintainer:          
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >=4.8,
    text >=1.2,
    mtl >=2.1,
    text-format >=0.3,
    filepath >=1.4,
    containers >=0.5,
    vector >=0.10,
    data-default >=0.5,
    conduit-combinators >=1.0,
    conduit-extra >=1.1,
    xml-types >=0.3,
    xml-conduit >=1.3,
    lens >=4.9,
    xml-lens >=0.1,
    template-haskell >=2.10,
    parsec >=3.1,
    syb >=0.4.4,
    bytestring >=0.10,
    aeson >=0.8
  exposed-modules:
    Data.Text.Format.Strict
    Data.Unicode.Decompose
    Data.Unicode.DecomposeChar
    Data.Unicode.MarkedLetter
    Text.Greek.Conversions
    Text.Greek.Corpus.Bible
    Text.Greek.Corpus.Bible.Stats
    Text.Greek.FileReference
    Text.Greek.Grammar
    Text.Greek.IO
    Text.Greek.Json
    Text.Greek.Morphology.Noun
    Text.Greek.Mounce.Adjective
    Text.Greek.Mounce.Euphony
    Text.Greek.Mounce.Morphology
    Text.Greek.Mounce.Noun
    Text.Greek.Mounce.NounFirstDeclension
    Text.Greek.Mounce.NounSecondDeclension
    Text.Greek.Mounce.NounThirdDeclension
    Text.Greek.Mounce.Parse
    Text.Greek.Mounce.Phonology
    Text.Greek.Mounce.Quote
    Text.Greek.Mounce.Verb
    Text.Greek.NewTestament.SBL
    Text.Greek.Parse.Utility
    Text.Greek.Paths
    Text.Greek.Phonology.Consonants
    Text.Greek.Phonology.Contractions
    Text.Greek.Phonology.Euphony
    Text.Greek.Phonology.Phoneme
    Text.Greek.Phonology.Shorthand
    Text.Greek.Phonology.ShowText
    Text.Greek.Phonology.Vowels
    Text.Greek.Render
    Text.Greek.Script
    Text.Greek.Script.Abstract
    Text.Greek.Script.Elision
    Text.Greek.Script.Mark
    Text.Greek.Script.Sound
    Text.Greek.Script.Syllable
    Text.Greek.Script.Token
    Text.Greek.Script.Unicode
    Text.Greek.Script.UnicodeTokenPairs
    Text.Greek.Script.Unit
    Text.Greek.Script.Word
    Text.Greek.Source.All
    Text.Greek.Source.PerseusInventory
    Text.Greek.Source.Sblgnt
    Text.Greek.Source.SblgntApp
    Text.Greek.Sublist
    Text.Greek.Utility
    Text.Greek.Xml.Common
    Text.Greek.Xml.Event
    Text.Greek.Xml.Parse
  ghc-options: -Wall -Werror -fwarn-tabs -O2
  hs-source-dirs:   src
  default-language: Haskell2010

executable sblgnt
  build-depends:
    base,
    containers,
    text,
    text-format,
    data-default,
    filepath,
    vector,
    xml-types,
    xml-conduit,
    lens,
    greek-grammar
  main-is: sblgnt.hs
  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: executables
  default-language: Haskell2010

executable run
  build-depends:
    base,
    containers,
    text,
    text-format,
    data-default,
    filepath,
    vector,
    xml-types,
    xml-conduit,
    lens,
    greek-grammar,
    parsec
  main-is: Run.hs
  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: executables
  default-language: Haskell2010

test-suite hunit
  type: exitcode-stdio-1.0
  main-is: hunit.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  build-depends:
    base,
    text,
    containers,
    filepath,
    test-framework,
    test-framework-hunit,
    HUnit,
    data-default,
    xml-conduit,
    lens,
    greek-grammar
