name:                ucd
version:             0.1.0.0
synopsis:            Haskell UCD Library
license:             MIT
author:              Scott Fleischman
maintainer:          
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable ucd-gen
  build-depends:
    base,
    containers,
    filepath,
    template-haskell
  main-is: UcdGen.hs
  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: .
  default-language: Haskell2010
