name:                unicode-script
version:             0.1.0.0
synopsis:            Generate Haskell code from UCD
license:             MIT
author:              Scott Fleischman
maintainer:          
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable unicode-script
  build-depends:
    base,
    text,
    filepath,
    containers,
    lens,
    text-format
  main-is: unicode-script.hs
  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: .
  default-language: Haskell2010
